--- a/src/pages/workspace/workspace.scss
+++ b/src/pages/workspace/workspace.scss
@@ -7,6 +7,7 @@
 
 .workspace-toolbar {
   display: flex;
+  justify-content: flex-end;
   align-items: center;
   padding: 8px 12px;
   background-color: #f5f5f5;
